# OctoDiary-tg

./: .env.example  .gitignore  api.py  apis.py  database.py  loop.py  main.py  pyproject.toml  requirements.txt  texts.json  utils.py
core/: dispatcher.py  routers.py
core/handlers/: __init__.py  admins.py  auth.py  diary.py  exceptions.py  feedback.py  inline.py  other.py  settings.py  start.py
core/keyboards/: inline.py  reply.py
core/misc/: additional_models.py  apis.py  loop.py  loops.py  states.py  texts.json  texts.py  utils.py
core/misc/inline/: __init__.py  manager.py  types.py
core/services/: api.py  database.py  logs.py  octodiary_x.py
handlers/: __init__.py  auth.py  feedback.py  homeworks.py  inline_query.py  loop.py  marks.py  profile.py  router.py  schedule.py  scheduler.py  settings.py  start.py  visits.py  web_auth.py
handlers/admins/: __init__.py  commands.py  router.py  statistics.py
handlers/mes/: __init__.py  _loop.py  homeworks.py  inline_query.py  loop.py  marks.py  profile.py  router.py  schedule.py  scheduler.py  settings.py  visits.py
handlers/mesh/: __init__.py  router.py
handlers/myschool/: __init__.py  _loop.py  homeworks.py  inline_query.py  loop.py  marks.py  profile.py  router.py  schedule.py  scheduler.py  settings.py
inline/: __init__.py  manager.py  types.py
utils/: __init__.py  additional_models.py  filters.py  keyboard.py  logs.py  other.py  texts.py
