
[tool.poetry]
name = "octodiary-tg"
version = "0.1.9"
description = "Telegram бот для использования МЭШ или Моей Школы МО."
authors = ["Den4ikSuperOstryyPer4ik <main@dsop.online>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {git = "https://github.com/aiogram/aiogram.git"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
gitpython = "^3.1.40"
python-dotenv = "^1.0.0"
lightdb = "^1.4.0"
segno = "^1.6.0"
octodiary = {git = "https://github.com/OctoDiary/OctoDiary-py.git"}
loguru = "^0.7.2"
requests = "^2.31.0"
plotly = "^5.24.1"
kaleido = "0.2.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "B027",
  "FBT003",
  "S105", "S106", "S107",
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  "A003", "A002",
  "PLR2004",
  "RUF001",
  "RUF002",
  "RUF003",
]
unfixable = [
  "F401",
  "RUF001",
  "RUF002",
  "RUF003",
]

[tool.ruff.isort]
known-first-party = ["octodiary"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
